[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/meshpainter/icons/bucket-selected.svg" type="Texture" id=1]
[ext_resource path="res://addons/meshpainter/icons/bucket.svg" type="Texture" id=2]
[ext_resource path="res://addons/meshpainter/icons/eraser.svg" type="Texture" id=3]
[ext_resource path="res://addons/meshpainter/icons/brush.svg" type="Texture" id=4]
[ext_resource path="res://addons/meshpainter/icons/brush-selected.svg" type="Texture" id=5]
[ext_resource path="res://addons/meshpainter/icons/eraser-selected.svg" type="Texture" id=6]
[ext_resource path="res://addons/meshpainter/metalness_panel.gd" type="Script" id=7]

[node name="M" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1009.0
margin_bottom = 557.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1002.0
margin_bottom = 14.0
text = "Metalness"

[node name="Modes" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1002.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 32 )

[node name="BrushButton" type="TextureButton" parent="VBoxContainer/Modes"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="BucketButton" type="TextureButton" parent="VBoxContainer/Modes"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="EraserButton" type="TextureButton" parent="VBoxContainer/Modes"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1002.0
margin_bottom = 58.0

[node name="ValueContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1002.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="VBoxContainer/ValueContainer"]
margin_right = 1002.0
margin_bottom = 14.0
text = "Value"

[node name="ValueSlider" type="HSlider" parent="VBoxContainer/ValueContainer"]
margin_top = 18.0
margin_right = 1002.0
margin_bottom = 38.0
rect_min_size = Vector2( 120, 20 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="SizeContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 1002.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="VBoxContainer/SizeContainer"]
margin_right = 1002.0
margin_bottom = 14.0
text = "Size"

[node name="SizeSlider" type="HSlider" parent="VBoxContainer/SizeContainer"]
margin_top = 18.0
margin_right = 1002.0
margin_bottom = 38.0
rect_min_size = Vector2( 120, 20 )
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1

[connection signal="pressed" from="VBoxContainer/Modes/BrushButton" to="." method="_on_BrushButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/BucketButton" to="." method="_on_BucketButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/EraserButton" to="." method="_on_EraserButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/ValueContainer/ValueSlider" to="." method="_on_ValueSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SizeContainer/SizeSlider" to="." method="_on_SizeSlider_value_changed"]
